# AmbER-Sets

./: README.md  print_amber_set_statistics.py  pyproject.toml  requirements.txt
amber_sets/: README.md
amber_sets/human/: fc_templates.json  good_pids.json  popular_pid_values.json
amber_sets/nonhuman/: entity_types_to_distinguishing_properties.json  fc_templates.json  good_pids.json  popular_pid_values.json
data/: README.md
data/human/: qa_templates.json
data/nonhuman/: qa_templates.json
evaluation/: README.md  evaluate_retriever.py  utils.py
generate_amber_sets/: README.md  align_amber_tuples_to_wikipedia.py  align_tuples_to_wikipedia.py  collect_polysemous_names.py  extract_polysemous_names.py  extract_wikidata_entities.py  filter_multi_entity_pids.py  filter_relations.py  filter_uninformative_pids.py  generate_fc_amber_sets.py  generate_qa_amber_sets.py  generate_sf_amber_sets.py
process_wikidata_dump/: README.md  build_qid_popularity_dictionary.py  map_aliases_to_qids.py  map_pids_to_labels.py  map_qids_to_aliases.py  map_qids_to_pids.py  process_wikidata_dump.sh
