[tool.poetry]
name = "amber-sets"
version = "0.1.0"
description = ""
authors = ["Anthony Chen <anthony.chen@uci.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.62.2"
jsonlines = "^2.0.0"
ujson = "^4.1.0"
inflect = "^5.3.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.7b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
